--- a/html-css/class-notes/hc14_boostrap-intro/grid.html
+++ b/html-css/class-notes/hc14_boostrap-intro/grid.html
@@ -28,6 +28,41 @@
         </div>
     </div>
 
+    <hr>
+
+    <h2>D-FLEX ALIGN</h2>
+    <div style="height: 100vh;" class="container border border-primary">
+        <div  class="row justify-content-center">
+            <div class="col-4 bg-success">Center</div>
+            <div class="col-4 bg-danger">Center</div>
+        </div>
+
+        <div class="row justify-content-between">
+            <div class="col-4 bg-warning">Center</div>
+            <div class="col-4 bg-info">Center</div>
+        </div>
+        <div class="row justify-content-between align-items-center">
+            <div class="col-4 bg-secondary">Center</div>
+            <div class="col-4 bg-dark text-light">Center</div>
+
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>    
