--- a/js/class-notes/js12-dom/index.html
+++ b/js/class-notes/js12-dom/index.html
@@ -11,6 +11,7 @@
     </header>
     <main>
         <section class="add-item">
+            merhaba section
             <h2>ADD NEW ITEM</h2>
             <input id="input" type="text">
             <input id="btn" type="button" value="ADD">
@@ -29,7 +30,8 @@
         </section>
     </main>
 
-    <script src="selectors.js"></script>
+    <!-- <script src="selectors.js"></script> -->
+    <script src="travesingDOM.js"></script>
     
 </body>
 </html>
